compiler/test/fail_compilation/failcstuff4b.i
/* TEST_OUTPUT:
---
fail_compilation/failcstuff4b.i(605): Error: invalid flag for line marker directive
---
*/

/****************************************************/
#line 605
#650 "fail_compilation/failcstuff4.c" invalid
